2005-11-07  Sami Wagiaalla  <swagiaal@redhat.com>	

	* actions/ActionManager.java: removed Attach/Detach actions from
	menu. See bz 1446

2005-11-07  Phil Muldoon  <pmuldoon@redhat.com>

	*  ProgramData.java (buildStore): Added
	
	* ProgramAddWindow.java (saveDialog): Dynamically add
	program event observers to listbox.
	(saveDialog): Moved default save location to ProgramData.
	(buildStore): Removed
	
	* MainWindow.java (MainWindow): Fixed ecj 3.1 warning.
	* ActionPool.java (ActionPool): Ditto.
	* ObserversMenu.java (ObserversMenu): Ditto.
	* ProgramDataModel.java (ProgramDataModel): Ditto.
	(toggle): Added.
	* ProgramViewPage: Added Toggle cell listener.

2005-11-07  Andrew Cagney  <cagney@redhat.com>

	* actions/Attach.java, actions/Resume.java, actions/Detach.java:
	Replace Proc.observableAttachedContinue and
	.observableDetachedContinue with .observableAttached and
	.observableDetached.

2005-11-06  Phil Muldoon  <pmuldoon@redhat.com>

	* ProgramViewPage.java (loadExistingMonitors): Fixed NPE. 
	BZ 1816 (.listFiles returns null on no files, not 0).

2005-11-06  Andrew Cagney  <cagney@redhat.com>

	* actions/Stop.java: Comment out call to Proc.requestAttachedStop.

2005-11-04  Phil Muldoon  <pmuldoon@redhat.com>

	* ProgramViewPage.java (loadExistingMonitors): Added.
	* ProgramData.java (load): Rewrite to use w3c dom load.
	JDOM parser crashes. Convert to JDOM using DOMBuilder().
	* ProgramDataModel.java (ProgramDataModel): made singleton.
	
	* ProgramAddWindow.java (buildStore): Added.
	(saveDialog): Added. Save data to xml.
	(applyLastClicked): Added (and set state globally)
	(cancelLastClicked): Ditto.


2005-11-04  Sami Wagiaalla  <swagiaal@redhat.com>

	* actions/ActionManager.java: New file. Added points for retrieving
	and adding action prototypes. 
	* actions/ProcAction.java: Abstract class for actions which apply
	to a Proc.
	* actions/TaskAction.java: Abstract class for actions which apply
	to a Task.